Portfolio projects images alt description

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
     <h2 class="page-title">Portfolio</h2>
     <ul class="portfolio-entries">
       <li class="portfolio-entry content">
-        <img src="../images/project5.PNG" alt="Project 2" />
+        <img src="../images/project5.PNG" alt="Expense Manager project screenshot" />
         <a href="#">
           <h3>Expense manager </h3>
         </a>
@@ -51,7 +51,7 @@
         </ul>
       </li>
       <li class="portfolio-entry content">
-        <img src="../images/project6.PNG" alt="Project 2" />
+        <img src="../images/project6.PNG" alt="Trouble Ticket System project screenshot" />
         <a href="#">
           <h3>Trouble Ticket System </h3>
         </a>
@@ -66,7 +66,7 @@
         </ul>
       </li>
       <li class="portfolio-entry content">
-        <img src="../images/project1.PNG" alt="Project 1" />
+        <img src="../images/project1.PNG" alt="e-Book project screenshot" />
         <a href="#">
           <h3>e-Book</h3>
         </a>
@@ -80,9 +80,9 @@
         </ul>
       </li>
       <li class="portfolio-entry content">
-        <img src="../images/project2.PNG" alt="Project 2" />
+        <img src="../images/project2.PNG" alt="Presentation site screenshot" />
         <a href="#">
-          <h3>Coffee site</h3>
+          <h3>Presentation site </h3>
         </a>
         <p>
           Coffee brand products online presentation. Video, photos, slides and timeline included.
@@ -97,7 +97,7 @@
         </ul>
       </li>
       <li class="portfolio-entry content">
-        <img src="../images/project3.PNG" alt="Project 2" />
+        <img src="../images/project3.PNG" alt="Interior products project screenshot" />
         <a href="#">
           <h3>Interior products</h3>
         </a>
@@ -111,7 +111,7 @@
         </ul>
       </li>
       <li class="portfolio-entry content">
-        <img src="../images/project4.PNG" alt="Project 2" />
+        <img src="../images/project4.PNG" alt="Buy, Sell Online project screenshot" />
         <a href="#">
           <h3>Buy, Sell Online </h3>
         </a>
