--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,6 +44,12 @@
           Web application developed in with express.js and bootstrap, that allows user to register daily expenses and get an insight of those ecpenses using filters and charts.Backend testing with mocha.js.
           Developed in team as part of a shcool project in Web Application Developement in Illinois Institute of Technology.
         </p>
+        <p>
+          <a href="http://economico.herokuapp.com" title="Economoco">Live</a>
+        </p>
+        <p>
+          <a href="https://github.com/IIT-Web-Application-Development/economico" title="Github Repository">GitHub</a>
+        </p>
         <ul>
           <li>
             Front-end
@@ -58,6 +64,9 @@
         <p>
           Desktop application developed in Java, with JavaFX for GUI. It's a basic system that allows user (simple or admin) to register and keep history of tickets handling a certain problem
            and assigned to a certain user, department and category.
+        </p>
+        <p>
+          <a href="https://github.com/ghyseni/trouble-ticket-system" title="GitHub Repository">GitHub</a>
         </p>
         <ul>
           <li>
