Put Live andGithub link inline

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -45,11 +45,9 @@
           Developed in team as part of a shcool project in Web Application Developement in Illinois Institute of Technology.
         </p>
         <p>
-          <a href="http://economico.herokuapp.com" title="Economoco">Live</a>
+          <a href="http://economico.herokuapp.com" title="Economoco">Live</a>,<a href="https://github.com/IIT-Web-Application-Development/economico" title="Github Repository">GitHub</a>
         </p>
         <p>
-          <a href="https://github.com/IIT-Web-Application-Development/economico" title="Github Repository">GitHub</a>
-        </p>
         <ul>
           <li>
             Front-end
