Add target blank to Live and GitHub links, portfolio page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -45,7 +45,7 @@
           Developed in team as part of a shcool project in Web Application Developement in Illinois Institute of Technology.
         </p>
         <p>
-          <a href="http://economico.herokuapp.com" title="Economoco">Live</a>,<a href="https://github.com/IIT-Web-Application-Development/economico" title="Github Repository">GitHub</a>
+          <a target="_blank" href="http://economico.herokuapp.com" title="Economoco">Live</a>,<a target="_blank" href="https://github.com/IIT-Web-Application-Development/economico" title="Github Repository">GitHub</a>
         </p>
         <p>
         <ul>
@@ -64,7 +64,7 @@
            and assigned to a certain user, department and category.
         </p>
         <p>
-          <a href="https://github.com/ghyseni/trouble-ticket-system" title="GitHub Repository">GitHub</a>
+          <a target="_blank" href="https://github.com/ghyseni/trouble-ticket-system" title="GitHub Repository">GitHub</a>
         </p>
         <ul>
           <li>
