Remove empty <p> after Economico Live,GitHub link

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -45,9 +45,9 @@
           Developed in team as part of a shcool project in Web Application Developement in Illinois Institute of Technology.
         </p>
         <p>
-          <a target="_blank" href="http://economico.herokuapp.com" title="Economoco">Live</a>,<a target="_blank" href="https://github.com/IIT-Web-Application-Development/economico" title="Github Repository">GitHub</a>
+          <a target="_blank" href="http://economico.herokuapp.com" title="Economoco">Live</a>,
+          <a target="_blank" href="https://github.com/IIT-Web-Application-Development/economico" title="Github Repository">GitHub</a>
         </p>
-        <p>
         <ul>
           <li>
             Front-end
