Update contact info

--- a/contact/index.html
+++ b/contact/index.html
@@ -43,10 +43,11 @@
         projects.
       </p>
       <address class="address">
-        1234 Street Name, Chicago, IL, USA
+        3241 S Wabash Ave, Chicago, IL, USA
       </address>
-      <a class="phone" href="tel:+10000000000">(+1)000-000-0000</a>
-      <a class="email" href="mailto:ghyseni@hawk.iit.edu">ghyseni@hawk.iit.edu</a>
+      <a class="phone" href="tel:+19174598826">(+1)917-459-8826</a>
+      <a class="phone" href="tel:+38649777826">(+386)49 777 826</a>
+      <a class="email" href="mailto:hysenigresa@gmail.com">hysenigresa@gmail.com</a>
     </section>
     <section class="contact-form content">
       <h3> Send me an email</h3>
